# rl-data-platform

./: .env  .env.example  CLAUDE.md  Makefile  docker-compose.dev.yml  docker-compose.yml  rl_platform_prd.md
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: config.py  dependencies.py  main.py
backend/app/api/: admin.py  assignments.py  auth.py  exports.py  metrics.py  projects.py  tasks.py
backend/app/core/: database.py  exceptions.py  redis_client.py  security.py  storage.py
backend/app/models/: __init__.py  annotator_performance.py  assignment.py  export_job.py  project.py  quality_metric.py  response.py  reward_signal.py  task.py  user.py
backend/app/schemas/: assignment.py  auth.py  export.py  project.py  response.py  reward_signal.py  task.py  user.py
backend/app/services/: assignment_service.py  auth_service.py  export_service.py  task_service.py
backend/app/tests/: conftest.py  test_assignments.py  test_auth.py  test_exports.py  test_tasks.py
backend/app/utils/: agreement_metrics.py
backend/app/workers/: celery_app.py  export_tasks.py
frontend/: index.html  nginx.conf  package.json
frontend/src/: index.css
frontend/src/api/: assignments.ts  auth.ts  client.ts  exports.ts  metrics.ts  projects.ts  tasks.ts
frontend/src/components/: ExportDialog.tsx  ProtectedRoute.tsx  RewardForm.tsx
frontend/src/hooks/: useAssignment.ts  useAuth.ts  useMetrics.ts  useTasks.ts
frontend/src/lib/: utils.ts
monitoring/: docker-compose.monitoring.yml
monitoring/prometheus/: prometheus.yml
scripts/: seed_db.py
(+18 files in other folders)
